--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.geometricshapedata.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.interfaces.geometricshapedata.yml
@@ -12,7 +12,7 @@ items:
       - 'excel!Excel.Interfaces.GeometricShapeData#id:member'
   - uid: 'excel!Excel.Interfaces.GeometricShapeData#id:member'
     summary: |-
-      返回形状标识符。 只读。
+      返回形状标识符。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
