--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.rangefill.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.rangefill.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.RangeFill#clear:member(1)'
@@ -65,7 +65,7 @@ items:
           ```
   - uid: 'excel!Excel.RangeFill#color:member'
     summary: |-
-      代表表单\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
+      代表表单\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -191,7 +191,7 @@ items:
                       }
   - uid: 'excel!Excel.RangeFill#pattern:member'
     summary: |-
-      获取或设置区域的图案。 有关详细信息，请参阅 Excel.FillPattern。 不支持 LinearGradient 和 RectangularGradient。 如果为 null 值，则表示整个区域没有统一的模式设置。
+      区域的图案。 有关详细信息，请参阅 Excel.FillPattern。 不支持 LinearGradient 和 RectangularGradient。 如果为 null 值，则表示整个区域没有统一的模式设置。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pattern
@@ -206,7 +206,7 @@ items:
           - 'excel!Excel.RangeFill#pattern~0:complex'
   - uid: 'excel!Excel.RangeFill#patternColor:member'
     summary: |-
-      设置表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。 获取表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如 "FFA500"）。
+      表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternColor
@@ -221,7 +221,7 @@ items:
           - string
   - uid: 'excel!Excel.RangeFill#patternTintAndShade:member'
     summary: |-
-      返回或设置一个使区域填充的图案颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。 如果模式 tintAndShades 不一致，则将返回 null。
+      指定用于将区域填充的图案颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果模式 tintAndShades 不一致，则将返回 null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternTintAndShade
@@ -259,7 +259,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.RangeFill#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -280,7 +280,7 @@ items:
             - 'excel!Excel.RangeFill:class'
   - uid: 'excel!Excel.RangeFill#tintAndShade:member'
     summary: |-
-      返回或设置一个使区域填充的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。 如果 tintAndShades 不是统一的，将返回 null。
+      指定用于将区域填充的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果 tintAndShades 不是统一的，将返回 null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
@@ -307,7 +307,7 @@ items:
           - 'excel!Excel.Interfaces.RangeFillData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -326,7 +326,7 @@ references:
         fullName: ' | "None" | "Solid" | "Gray50" | "Gray75" | "Gray25" | "Horizontal" | "Vertical" | "Down" | "Up" | "Checker" | "SemiGray75" | "LightHorizontal" | "LightVertical" | "LightDown" | "LightUp" | "Grid" | "CrissCross" | "Gray16" | "Gray8" | "LinearGradient" | "RectangularGradient"'
   - uid: 'excel!Excel.Interfaces.RangeFillUpdateData:interface'
     name: Interfaces.RangeFillUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.RangeFillData:interface'
     name: Excel.Interfaces.RangeFillData
