--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartplotareaformat.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartplotareaformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartPlotAreaFormat#border:member'
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.ChartPlotAreaFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartPlotAreaFormat#border:member'
     summary: |-
-      表示图表 plotArea 的边框属性。
+      指定图表 plotArea 的边框属性。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
@@ -52,7 +52,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartPlotAreaFormat#fill:member'
     summary: |-
-      表示对象的填充格式，包括背景格式信息。
+      指定对象的填充格式，其中包括背景格式信息。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
@@ -152,7 +152,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartPlotAreaFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -185,7 +185,7 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartBorder:class'
     name: Excel.ChartBorder
@@ -199,7 +199,7 @@ references:
     name: Excel.Interfaces.ChartPlotAreaFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatUpdateData:interface'
     name: Interfaces.ChartPlotAreaFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatData:interface'
     name: Excel.Interfaces.ChartPlotAreaFormatData
