--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartaxisloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartaxisloadoptions.yml
@@ -67,7 +67,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#alignment:member'
     summary: |-
-      表示指定轴刻度线标签的对齐方式。 有关详细信息，请参阅 ChartTextHorizontalAlignment。
+      指定指定轴刻度线标签的对齐方式。 有关详细信息，请参阅 ChartTextHorizontalAlignment。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: alignment
@@ -82,7 +82,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#axisGroup:member'
     summary: |-
-      返回或设置指定轴的组。 有关详细信息，请参阅 ChartAxisGroup。 只读。
+      为指定坐标轴指定组。 有关详细信息，请参阅 ChartAxisGroup。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisGroup
@@ -97,7 +97,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#baseTimeUnit:member'
     summary: |-
-      返回或设置指定分类轴的基本单位。
+      指定指定分类轴的基本单位。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: baseTimeUnit
@@ -112,7 +112,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#categoryType:member'
     summary: |-
-      返回或设置分类轴类型。
+      指定分类轴类型。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: categoryType
@@ -127,7 +127,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#crosses:member'
     summary: |-
-      \[被保留以用于与现有第一方解决方案\]的后端兼容。 请`Position`改用。 表示两轴交叉处的特定轴。 有关详细信息，请参阅 ChartAxisPosition。
+      \[被保留以用于与现有第一方解决方案\]的后端兼容。 请`Position`改用。 指定另一个轴交叉处的指定坐标轴。 有关详细信息，请参阅 ChartAxisPosition。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: crosses
@@ -142,7 +142,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#crossesAt:member'
     summary: |-
-      \[被保留以用于与现有第一方解决方案\]的后端兼容。 请`PositionAt`改用。 表示两轴交叉处的特定轴。 只读。 设置此属性应使用 SetCrossesAt(double) 方法。
+      \[被保留以用于与现有第一方解决方案\]的后端兼容。 请`PositionAt`改用。 指定另一坐标轴交叉处的指定坐标轴。 设置此属性应使用 SetCrossesAt(double) 方法。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: crossesAt
@@ -157,7 +157,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#customDisplayUnit:member'
     summary: |-
-      标识自定义轴显示单位值。 只读。 要设置此属性，请使用 SetCustomDisplayUnit(double) 方法。
+      指定自定义轴显示单位值。 要设置此属性，请使用 SetCustomDisplayUnit(double) 方法。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: customDisplayUnit
@@ -202,7 +202,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#height:member'
     summary: |-
-      表示图表轴的高度，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定图表坐标轴的高度（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -217,7 +217,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#isBetweenCategories:member'
     summary: |-
-      表示数值轴是否与分类之间的分类轴交叉。
+      指定数值轴与分类轴相交于分类之间。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isBetweenCategories
@@ -232,7 +232,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#left:member'
     summary: |-
-      表示轴的左边缘到图表区域左侧的距离，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定从坐标轴的左边缘到图表区左侧的距离（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -247,7 +247,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#logBase:member'
     summary: |-
-      表示使用对数刻度时对数的底数。
+      指定使用对数刻度时的对数的底数。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: logBase
@@ -277,7 +277,7 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#majorTickMark:member'
     summary: |-
-      表示特定轴的主要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
+      指定坐标轴的主要刻度线的类型。 有关详细信息，请参阅 ChartAxisTickMark。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: majorTickMark
@@ -292,7 +292,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#majorTimeUnitScale:member'
     summary: |-
-      返回或设置当 CategoryType 属性设为 TimeScale 时分类轴的主要单位刻度值。
+      当 CategoryType 属性设置为 "时间刻度" 时，指定分类轴的主要刻度单位刻度值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: majorTimeUnitScale
@@ -367,7 +367,7 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#minorTickMark:member'
     summary: |-
-      表示指定轴的次要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
+      指定指定坐标轴的次要刻度线类型。 有关详细信息，请参阅 ChartAxisTickMark。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minorTickMark
@@ -382,7 +382,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#minorTimeUnitScale:member'
     summary: |-
-      返回或设置当 CategoryType 属性设为 TimeScale 时分类轴的次要单位刻度值。
+      当 CategoryType 属性设置为 "时间刻度" 时，指定分类轴的次要刻度单位刻度值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minorTimeUnitScale
@@ -412,7 +412,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#multiLevel:member'
     summary: |-
-      表示是否为多级轴。
+      指定轴是否为多级。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: multiLevel
@@ -427,7 +427,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#numberFormat:member'
     summary: |-
-      表示轴刻度线标签的格式代码。
+      指定轴刻度线标签的格式代码。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
@@ -442,7 +442,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#offset:member'
     summary: |-
-      表示不同标签级别之间的距离以及一级标签和轴线之间的距离。 此值应该是 0 到 1000 之间的整数。
+      指定标签级别之间的距离以及第一层和轴线之间的距离。 此值应该是 0 到 1000 之间的整数。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: offset
@@ -457,7 +457,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#position:member'
     summary: |-
-      表示两轴交叉的特定轴位置。 有关详细信息，请参阅 ChartAxisPosition。
+      指定另一个轴交叉处的指定轴位置。 有关详细信息，请参阅 ChartAxisPosition。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
@@ -472,7 +472,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#positionAt:member'
     summary: |-
-      表示两轴交叉的特定轴位置。 应使用 SetPositionAt(double) 方法设置此属性。
+      指定另一坐标轴交叉处的指定轴位置。 应使用 SetPositionAt(double) 方法设置此属性。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: positionAt
@@ -487,7 +487,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#reversePlotOrder:member'
     summary: |-
-      表示 Microsoft Excel 是否按照最后一个到第一个的顺序绘制数据点。
+      指定 Excel 是否将数据点绘制为从最后一个到第一个。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: reversePlotOrder
@@ -502,7 +502,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#scaleType:member'
     summary: |-
-      表示数值轴刻度类型。 有关详细信息，请参阅 ChartAxisScaleType。
+      指定数值轴的刻度类型。 有关详细信息，请参阅 ChartAxisScaleType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scaleType
@@ -517,7 +517,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#showDisplayUnitLabel:member'
     summary: |-
-      表示轴显示单位标签是否可见。
+      指定轴显示单位标签是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showDisplayUnitLabel
@@ -532,7 +532,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#textOrientation:member'
     summary: |-
-      表示文本面向图表轴刻度线标签的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
+      指定文本面向图表轴刻度线标签的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
@@ -547,7 +547,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#tickLabelPosition:member'
     summary: |-
-      表示特定轴上的刻度线标签位置。 有关详细信息，请参阅 ChartAxisTickLabelPosition。
+      在指定坐标轴上指定刻度线标签的位置。 有关详细信息，请参阅 ChartAxisTickLabelPosition。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickLabelPosition
@@ -562,7 +562,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#tickLabelSpacing:member'
     summary: |-
-      表示刻度线标签之间的分类或系列数。 可以是 1 到 31999 的值或空字符串（自动设置）。 返回的值始终为数字。
+      指定分类或系列轴刻度线标签之间的数目。 可以是 1 到 31999 的值或空字符串（自动设置）。 返回的值始终为数字。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickLabelSpacing
@@ -577,7 +577,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#tickMarkSpacing:member'
     summary: |-
-      表示刻度线之间的分类或系列数。
+      指定分类或刻度线之间的系列数。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tickMarkSpacing
@@ -607,7 +607,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#top:member'
     summary: |-
-      表示轴的上边缘到图表区域顶部的距离，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定从轴的上边缘到图表区域顶部的距离（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -622,7 +622,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#type:member'
     summary: |-
-      表示轴类型。 有关详细信息，请参阅 ChartAxisType。
+      指定坐标轴类型。 有关详细信息，请参阅 ChartAxisType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -637,7 +637,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#visible:member'
     summary: |-
-      该布尔值表示轴的可见性。
+      指定轴是否可见。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -652,7 +652,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisLoadOptions#width:member'
     summary: |-
-      表示图表轴的宽度，以磅为单位。 如果轴不可见，则为 Null。 只读。
+      指定图表坐标轴的宽度（以磅为单位）。 如果轴不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
